--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -135,7 +135,7 @@
                     </select>
                 </div>
                 <div class="form-group col-xs-6">
-                    <label for="erode">輪廓線增強(增強線條效果)</label>
+                    <label for="erode">輪廓線增強</label>
                     <select class="form-control" id="erode" name="erode">
                         <option value="0" selected>無</option>
                         <option value="1">弱</option>
