--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -108,7 +108,7 @@
                     <input type="hidden" name="language" value="{{language}}">
                 </div>
                 <div class="form-group col-xs-6">
-                    <label class="control-label" for="k">顏色數量(幾bit的風格)</label>
+                    <label class="control-label" for="k">色數（幾bit）</label>
                     <select class="form-control" id="k" name="k">
                         <option value="2">2</option>
                         <option value="4" selected>4</option>
