--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -83,7 +83,7 @@
             <form action="./" method="post" enctype="multipart/form-data">
                 <div class="form-group col-xs-12">
                     <a id="file_select" class="btn btn-default">
-                        <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> Open File
+                        <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Open File
                     </a>
                     <span id="file_info" class="help-block">Image, GIF or mp4(maxinum:2MB)<a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">Click here to get the local version to get rid of file size restriction</a></span>
                     <input type="file" name="image" id="file_input" accept='image/png,image/jpeg,image/gif,video/mp4,video/avi' style="display:none;">
@@ -106,6 +106,7 @@
                         <option value="2" selected>2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
+                        <option value="5">5</option>
                     </select>
                 </div>
                 <div class="form-group col-xs-6">
@@ -167,7 +168,7 @@
                 </div>
                 <div class="form-group col-xs-12">
                 <button type="submit" id="submit" class="btn btn-primary btn-block">
-                    <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Pixel Art Transform Button
+                    <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>Pixel Art Transform Button
                 </button>
             </form>
             <div class="add-margin-top">
