--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link rel="shortcut icon" href="static/icon/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="static/icon/favicon_pixel.ico" type="image/x-icon" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
