--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -117,7 +117,7 @@
                     </select>
                 </div>
                 <div class="form-group col-xs-6">
-                    <label for="scale">像素大小(像素顆粒大小)</label>
+                    <label for="scale">像素顆粒大小</label>
                     <select class="form-control" id="scale" name="scale">
                         <option value="1">1</option>
                         <option value="2" selected>2</option>
@@ -127,7 +127,7 @@
                     </select>
                 </div>
                 <div class="form-group col-xs-6">
-                    <label for="blur">平滑化圖片(將局部模糊)</label>
+                    <label for="blur">平滑、局部模糊圖片</label>
                     <select class="form-control" id="blur" name="blur">
                         <option value="0" selected>無</option>
                         <option value="50">弱</option>
