--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -9,25 +9,8 @@
     <title>像素濾鏡工具</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/original.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="static/icon16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="static/icon32.png" sizes="32x32">
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-67548213-4', 'auto');
-  ga('send', 'pageview');
-    </script>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "ca-pub-8801073924550495",
-        enable_page_level_ads: true
-      });
-    </script>
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -102,9 +85,18 @@
                     <a id="file_select" class="btn btn-default">
                         <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>開啟檔案
                     </a>
-                    <span id="file_info" class="help-block">圖像、GIF或影片(最大2MB) <a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">點擊取得沒有大小限制的本地版</a></span>
+                    <span id="file_info" class="help-block">圖像、GIF或影片(最大2MB)<a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">點擊取得沒有大小限制的本地版</a></span>
                     <input type="file" name="image" id="file_input" accept='image/png,image/jpeg,image/gif,video/mp4,video/avi' style="display:none;">
-                    <input type="hidden" name="last_image" value="{{last_image}}">
+                    {% if last_image %}
+                    <div class="preview">
+                        <p>{{last_image}}</p>
+                    </div>
+                    {% else %}
+                    <div class="preview">
+                        <p>目前沒有上傳的檔案</p>
+                    </div>
+                    {% endif %}
+                    <input type="hidden" name="last_image" id="last_image" value="{{last_image}}">
                     <input type="hidden" name="language" value="{{language}}">
                 </div>
                 <div class="form-group col-xs-6">
@@ -127,7 +119,7 @@
                     </select>
                 </div>
                 <div class="form-group col-xs-6">
-                    <label for="blur">平滑、局部模糊圖片</label>
+                    <label for="blur">平滑、局部模糊</label>
                     <select class="form-control" id="blur" name="blur">
                         <option value="0" selected>無</option>
                         <option value="50">弱</option>
@@ -287,16 +279,7 @@
     });
 </script>
 {% endif %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="static/js/bootstrap.min.js"></script>
-<script src="static/js/js.cookie.js"></script>
-<script src="static/js/script.js"></script>
-<script>
-    $('#file_select').click(function(){
-        console.log('RRR');
-        $('#file_input').trigger('click'); 
-        }
-    );
+<script>// script for language
     function load_language(){
         if(location.pathname.length==1){
             if(localStorage.getItem('language')!='traditional_chinese'){
@@ -309,8 +292,14 @@
         document.getElementsByName("language")[0].value = 'tch';
         localStorage.setItem('language', 'traditional_chinese');
     }
-    document.body.addEventListener('click',set_language, false);
-    window.addEventListener('load', load_language, false);
+    function init(){
+        document.body.addEventListener('click',set_language, false);
+        document.getElementById('file_input').addEventListener('click', set_last_image_name, false);
+        load_language();
+        set_last_image_name();
+    }
+    window.addEventListener('load', init, false);
 </script>
+<script src="static/js/file_load_helper_tch.js"></script>
 </body>
 </html>
