--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Can turn Image into Pixel Art style">
     <title>Pixel-Art-Filter-Web</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/checkbox.css" rel="stylesheet">
     <link href="static/css/original.css" rel="stylesheet">
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -82,7 +83,7 @@
         <div class="col-md-4 clearfix">
             <form action="./" method="post" enctype="multipart/form-data">
                 <div class="form-group col-xs-12">
-                    <a id="file_select" class="btn btn-default">
+                    <a id="file_select" class="btn btn-dark">
                         <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> Open File
                     </a>
                     <span id="file_info" class="help-block">Image, GIF or mp4(maxinum:2MB)<a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">Click here to get the local version to get rid of file size restriction</a></span>
@@ -169,14 +170,14 @@
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="checkbox">
-                        <label><input id="alpha" name="alpha" type="checkbox" value="1" checked>Export as transparant PNG</label>
+                        <input id="alpha" name="alpha" type="checkbox" value="1" checked><label for="alpha">Export as transparant PNG</label>
                     </div>
                     <div class="checkbox">
-                        <label><input id="to_tw" name="to_tw" type="checkbox" value="1" checked>Twitter corner 1pixel transparant(avoid Twitter force image to jpg file)</label>
+                        <input id="to_tw" name="to_tw" type="checkbox" value="1" checked><label for="to_tw">Corner 1px Alpha(without compressing jpg)</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                <button type="submit" id="submit" class="btn btn-primary btn-block">
+                <button type="submit" id="submit" class="btn btn-dark btn-block">
                     <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Pixel Art Transform Button
                 </button>
             </form>
