--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -8,6 +8,7 @@
     <meta name="description" content="可以把圖片變成像素風格">
     <title>像素濾鏡工具</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/checkbox.css" rel="stylesheet">
     <link href="static/css/original.css" rel="stylesheet">
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -82,7 +83,7 @@
         <div class="col-md-4 clearfix">
             <form action="./" method="post" enctype="multipart/form-data">
                 <div class="form-group col-xs-12">
-                    <a id="file_select" class="btn btn-default">
+                    <a id="file_select" class="btn btn-dark">
                         <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> 開啟檔案
                     </a>
                     <span id="file_info" class="help-block">圖像、GIF或影片(最大2MB)<a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">點擊取得沒有大小限制的本地版</a></span>
@@ -169,14 +170,14 @@
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="checkbox">
-                        <label><input id="alpha" name="alpha" type="checkbox" value="1" checked>導出為透明PNG</label>
+                        <input id="alpha" name="alpha" type="checkbox" value="1" checked><label for="alpha">導出為透明PNG</label>
                     </div>
                     <div class="checkbox">
-                        <label><input id="to_tw" name="to_tw" type="checkbox" value="1" checked>Twitter角落1pixel透明(避免被Twitter強制轉成jpg)</label>
+                        <input id="to_tw" name="to_tw" type="checkbox" value="1" checked><label for="to_tw">角落1px透明(防止Twitter壓縮jpg)</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
-                <button type="submit" id="submit" class="btn btn-primary btn-block">
+                <button type="submit" id="submit" class="btn btn-dark btn-block">
                     <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> 像素轉換按鈕
                 </button>
             </form>
