--- a/script/static/css/checkbox.css
+++ b/script/static/css/checkbox.css
@@ -12,13 +12,12 @@ label[for="alpha"], label[for="to_tw"]{
     left: -10px;
     margin-bottom: 10px;
     padding-left: 26px;
-    background: url(img/checks.png) no-repeat;
-    background-position: 0 -98px;
+    background: url(img/no_checked.png) no-repeat;
     line-height: 24px;
     cursor: pointer;
 }
 input:checked + label[for="alpha"],
 input:checked + label[for="to_tw"]{
-    background-position: 0 -65px;
+    background: url(img/checked.png) no-repeat;
     color: #ce1010;
 }
