--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -12,6 +12,9 @@
     <link href="static/css/original.css" rel="stylesheet">
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <!-- night mode -->
+    <script src="static/js/darkmode-js.min.js"></script>
+    <script src="static/js/dark_mode.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -173,7 +176,7 @@
                         <input id="alpha" name="alpha" type="checkbox" value="1" checked><label for="alpha">Export as transparant PNG</label>
                     </div>
                     <div class="checkbox">
-                        <input id="to_tw" name="to_tw" type="checkbox" value="1" checked><label for="to_tw">Corner 1px Alpha(without compressing jpg)</label>
+                        <input id="to_tw" name="to_tw" type="checkbox" value="1" checked><label for="to_tw">Corner 1px Alpha(No compressing)</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
