--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -12,6 +12,9 @@
     <link href="static/css/original.css" rel="stylesheet">
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <!-- night mode -->
+    <script src="static/js/darkmode-js.min.js"></script>
+    <script src="static/js/dark_mode.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-inverse">
