--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -8,10 +8,11 @@
     <meta name="description" content="可以把圖片變成像素風格">
     <title>像素濾鏡工具</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/checkbox.css" rel="stylesheet">
     <link href="static/css/original.css" rel="stylesheet">
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <!-- checkbox -->
+    <link href="static/css/checkbox.css" rel="stylesheet">
     <!-- night mode -->
     <!-- <script src="static/js/darkmode-js.min.js"></script>
     <script src="static/js/dark_mode.js"></script> -->
