--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -13,9 +13,6 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <!-- checkbox -->
     <link href="static/css/checkbox.css" rel="stylesheet">
-    <!-- night mode -->
-    <!-- <script src="static/js/darkmode-js.min.js"></script>
-    <script src="static/js/dark_mode.js"></script> -->
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -306,5 +303,6 @@
     window.addEventListener('load', init, false);
 </script>
 <script src="static/js/file_load_helper_tch.js"></script>
+<script src="static/js/pixel_set.js"></script>
 </body>
 </html>
