--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -32,6 +32,7 @@
                 <li><a href="https://github.com/JingShing/Pixel-Art-Filter-Web" target="_blank">GitHub</a></li>
                 <li><a href="https://jingshing.com/" target="_blank">SITE</a></li>
                 <li><a href="{{url_for('english')}}">English</a></li>
+                <li><a id="other_lang"><span id="other_lang_s">Other Language</span><div id='google_translate_element' hidden></div></a></li>
             </ul>
         </div>
     </div>
@@ -304,5 +305,9 @@
 </script>
 <script src="static/js/file_load_helper_tch.js"></script>
 <script src="static/js/pixel_set.js"></script>
+<!-- google translate -->
+<script type="text/javascript" src="static\js\google_translate_element.js"></script>
+<script type="text/javascript" src="static\js\google_translate.js"></script>
+
 </body>
 </html>
