--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -18,7 +18,7 @@
     <!-- format -> <button aria-label="instruction" data-balloon-pos="direction(ex:up)"></button> -->
     <!-- format -> aria-label="" data-balloon-pos="up" -->
 </head>
-<body>
+<body style="background-color: #6D6D6D;">
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
@@ -85,7 +85,7 @@
     </div>
 </div>
 <div class="container">
-    <div class="row">
+    <div class="row" style="border-radius: 25px;border: solid black;padding: 10px; background-color: white;">
         <div class="col-md-4 clearfix">
             <form action="./" method="post" enctype="multipart/form-data">
                 <div class="form-group col-xs-12">
