--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -89,7 +89,7 @@
         <div class="col-md-4 clearfix">
             <form action="./" method="post" enctype="multipart/form-data">
                 <div class="form-group col-xs-12">
-                    <a id="file_select" class="btn btn-dark" aria-label="Now support PNG, JPG, MP4 and AVI file format" data-balloon-pos="up">
+                    <a id="file_select" class="btn btn-dark" aria-label="Now support PNG, JPG, MP4 and AVI file format" data-balloon-pos="up" data-balloon-length="medium">
                         <span class="glyphicon glyphicon-picture" aria-hidden="true"></span> Open File
                     </a>
                     <span id="file_info" class="help-block">Image, GIF or mp4(maxinum:2MB)<a href="https://github.com/JingShing-Tools/Pixel-Art-transform-in-python" target="_blank">Click here to get the local version to get rid of file size restriction</a></span>
@@ -107,7 +107,7 @@
                     <input type="hidden" name="language" value="{{language}}">
                 </div>
                 <div class="form-group col-xs-6">
-                    <label class="control-label" for="k" aria-label="Color number means how many bits pixel style you want to transform" data-balloon-pos="up">Color number(bits)</label>
+                    <label class="control-label" for="k" aria-label="Color number means how many bits pixel style you want to transform" data-balloon-pos="up" data-balloon-length="medium">Color number(bits)</label>
                     <select class="form-control" id="k" name="k">
                         <option value="2">2</option>
                         <option value="4" selected>4</option>
@@ -116,7 +116,7 @@
                     </select>
                 </div>
                 <div class="form-group col-xs-6">
-                    <label for="scale" aria-label="Pixel size means how big each pixel will be. If number greater image will be more blurred" data-balloon-pos="up">Pixel Size</label>
+                    <label for="scale" aria-label="Pixel size means how big each pixel will be. If number greater image will be more blurred" data-balloon-pos="up" data-balloon-length="medium">Pixel Size</label>
                     <select class="form-control" id="scale" name="scale">
                         <option value="1">1</option>
                         <option value="2" selected>2</option>
@@ -126,7 +126,7 @@
                     </select>
                 </div>
                 <div class="form-group col-xs-6">
-                    <label for="blur" aria-label="Smooth will blur some part of your image. It will help you reducing noise point of result" data-balloon-pos="up">Smooth</label>
+                    <label for="blur" aria-label="Smooth will blur some part of your image. It will help you reducing noise point of result" data-balloon-pos="up" data-balloon-length="medium">Smooth</label>
                     <select class="form-control" id="blur" name="blur">
                         <option value="0" selected>None</option>
                         <option value="50">Weak</option>
@@ -135,7 +135,7 @@
                     </select>
                 </div>
                 <div class="form-group col-xs-6">
-                    <label for="erode" aria-label="Outlines enhence can help you emphasize the object in the image" data-balloon-pos="up">Outlines Enhence</label>
+                    <label for="erode" aria-label="Outlines enhence can help you emphasize the object in the image" data-balloon-pos="up" data-balloon-length="medium">Outlines Enhence</label>
                     <select class="form-control" id="erode" name="erode">
                         <option value="0" selected>None</option>
                         <option value="1">Weak</option>
@@ -143,7 +143,7 @@
                     </select>
                 </div>
                 <div class="form-group col-xs-6">
-                    <label for="saturation" aria-label="Saturation edit can help you edit light intensity of the image" data-balloon-pos="up">Saturation Edit</label>
+                    <label for="saturation" aria-label="Saturation edit can help you edit light intensity of the image" data-balloon-pos="up" data-balloon-length="medium">Saturation Edit</label>
                     <select class="form-control" id="saturation" name="saturation">
                         <option value="-250">-250</option>
                         <option value="-200">-200</option>
@@ -159,7 +159,7 @@
                     </select>
                 </div>
                 <div class="form-group col-xs-6">
-                    <label for="contrast" aria-label="Contrast edit can help you make image more intense or more flex" data-balloon-pos="up">Contrast Edit</label>
+                    <label for="contrast" aria-label="Contrast edit can help you make image more intense or more flex" data-balloon-pos="up" data-balloon-length="medium">Contrast Edit</label>
                     <select class="form-control" id="contrast" name="contrast">
                         <option value="-250">-250</option>
                         <option value="-200">-200</option>
@@ -176,10 +176,10 @@
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="checkbox">
-                        <input id="alpha" name="alpha" type="checkbox" value="1" checked><label for="alpha" aria-label="Can keep alpha part of PNG image" data-balloon-pos="up">Export as transparant PNG</label>
+                        <input id="alpha" name="alpha" type="checkbox" value="1" checked><label for="alpha" aria-label="Can keep alpha part of PNG image" data-balloon-pos="up" data-balloon-length="medium">Export as transparant PNG</label>
                     </div>
                     <div class="checkbox">
-                        <input id="to_tw" name="to_tw" type="checkbox" value="1" checked><label for="to_tw" aria-label="Can keep Twitter compress your image into JPG file format" data-balloon-pos="up">Corner 1px Alpha(No compressing)</label>
+                        <input id="to_tw" name="to_tw" type="checkbox" value="1" checked><label for="to_tw" aria-label="Can keep Twitter compress your image into JPG file format" data-balloon-pos="up" data-balloon-length="medium">Corner 1px Alpha(No compressing)</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
