--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -14,11 +14,13 @@
     <!-- checkbox -->
     <link href="static/css/checkbox.css" rel="stylesheet">
     <!-- Teach bubble -->
-    <link href="static/css/hover_teach.css" rel="stylesheet">
     <!-- format -> <button aria-label="instruction" data-balloon-pos="direction(ex:up)"></button> -->
     <!-- format -> aria-label="" data-balloon-pos="up" -->
+    <link href="static/css/hover_teach.css" rel="stylesheet">
+    <!-- background -->
+    <link href="static/css/background_set.css" rel="stylesheet">
 </head>
-<body style="background-color: #6D6D6D;">
+<body>
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
@@ -85,7 +87,7 @@
     </div>
 </div>
 <div class="container">
-    <div class="row" style="border-radius: 25px;border: solid black;padding: 10px; background-color: white;">
+    <div class="row">
         <div class="col-md-4 clearfix">
             <form action="./" method="post" enctype="multipart/form-data">
                 <div class="form-group col-xs-12">
