--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -312,6 +312,6 @@
 <script src="static/js/pixel_set.js"></script>
 <!-- google translate -->
 <script type="text/javascript" src="static\js\google_translate_element.js"></script>
-<script type="text/javascript" src="static\js\google_translate.js"></script>
+<script type="text/javascript" src="static\js\google_translate_en.js"></script>
 </body>
 </html>
