--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -313,7 +313,7 @@
 <script src="static/js/pixel_set.js"></script>
 <!-- google translate -->
 <script type="text/javascript" src="static\js\google_translate_element.js"></script>
-<script type="text/javascript" src="static\js\google_translate.js"></script>
+<script type="text/javascript" src="static\js\google_translate_tch.js"></script>
 
 </body>
 </html>
