--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -183,6 +183,10 @@
                     <div class="checkbox">
                         <input id="to_tw" name="to_tw" type="checkbox" value="1" checked><label for="to_tw" aria-label="Can keep Twitter compress your image into JPG file format" data-balloon-pos="up" data-balloon-length="medium">Corner 1px Alpha(No compressing)</label>
                     </div>
+                    <div class="checkbox">
+                        <input id="qr_code" name="qr_code" type="checkbox" value="1"><label for="qr_code" aria-label="You can add content to QR code in the final result" data-balloon-pos="up" data-balloon-length="medium">Add QR code to image</label>
+                    </div>
+                    <label id="qr_code_content_hint" aria-label="Can add content in QR code" data-balloon-pos="up" data-balloon-length="medium" hidden>QR code text：</label><input id="qr_code_content" name="qr_code_content" type="text" hidden>
                 </div>
                 <div class="form-group col-xs-12">
                 <button type="submit" id="submit" class="btn btn-dark btn-block" aria-label="Make your dream come true!" data-balloon-pos="up">
@@ -310,6 +314,8 @@
 </script>
 <script src="static/js/file_load_helper_en.js"></script>
 <script src="static/js/pixel_set.js"></script>
+<!-- QR code -->
+<script src="static/js/qr_code_enable.js"></script>
 <!-- google translate -->
 <script type="text/javascript" src="static\js\google_translate_element.js"></script>
 <script type="text/javascript" src="static\js\google_translate_en.js"></script>
