--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -195,8 +195,8 @@
             </form>
             <div class="add-margin-top">
                 <a href="https://twitter.com/share" class="twitter-share-button"
-                   data-url="https://pixel.jingshing.com/" data-text="Pixel-Art-Filter-Tool" data-size="large"
-                   data-hashtags="Pixel-Art-Filter-Tool" data-lang="en" aria-label="tweet!" data-balloon-pos="up">Tweet</a>
+                   data-url="https://pixel.jingshing.com/" data-text="PixelArtFilterWeb" data-size="large"
+                   data-hashtags="PixelArtFilterWeb" data-lang="en" aria-label="tweet!" data-balloon-pos="up">Tweet</a>
                 <script>
                     !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
                 </script>
@@ -260,7 +260,7 @@
         <div class="col-md-6">
             <a class="twitter-timeline"
                 href="https://twitter.com/search?q="
-                data-widget-id="865822650572054529" data-chrome="nofooter noborders" target="_blank">#Pixel-Art-Filter-Web</a>
+                data-widget-id="865822650572054529" data-chrome="nofooter noborders" target="_blank">#PixelArtFilterWeb</a>
             <script>
                 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
             </script>
