--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -235,6 +235,8 @@
                 </div>
                 <input type="hidden" name="original_img_src" value="{{ org_img }}">
                 <input type="hidden" name="result_img_src" value="{{ result }}">
+                <input type="hidden" name="result_img_src" value="{{ user_key }}">
+                <input type="hidden" name="result_img_src" value="{{ user_secret_key }}">
                 <div class="form-group col-xs-12">
                     <button type="submit" id="twitter_submit" class="btn btn-primary btn-block">
                         <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> 分享結果到推特
